--- a/Sparc2/Sparc2/Catalog/Purchase/ProductPurchaseStripeForm.razor.css
+++ b/Sparc2/Sparc2/Catalog/Purchase/ProductPurchaseStripeForm.razor.css
@@ -15,16 +15,17 @@ form label span {
   line-height: 140%; /* 16.8px */
   letter-spacing: -0.12px;
 }
-form label input, form label select {
+form label input {
   display: flex;
   padding: 16px;
-  flex-direction: column;
+  margin-top: 8px;
+  width: 100%;
+  box-sizing: border-box;
   justify-content: center;
   align-items: flex-start;
   gap: 10px;
   border-radius: 26px;
   border: 1px solid var(--purple-100);
-  opacity: 0.5;
 }
 form label select {
   width: 50%;
