--- a/Sparc2/Sparc2/Catalog/ProductActions.razor.scss
+++ b/Sparc2/Sparc2/Catalog/ProductActions.razor.scss
@@ -127,12 +127,12 @@
         right: 0;
         font-size: 2rem;
         font-weight: 600;
-        color: var(--purple-700);
+        color: white;
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 16px 32px;
-        background: var(--yellow-200);
+        background: var(--purple-900);
         z-index: 1100;
     }
 
@@ -142,6 +142,10 @@
 
     button {
         background-color: transparent;
+
+        ::deep svg path { 
+            stroke: white;
+        }
     }
 }
 
