--- a/Sparc2/Sparc2/Catalog/ProductInfo.razor.scss
+++ b/Sparc2/Sparc2/Catalog/ProductInfo.razor.scss
@@ -62,6 +62,7 @@
         display: flex;
         flex-direction: row;
         gap: 4px;
+        flex-wrap: wrap;
 
         > * {
             display: flex;
@@ -78,6 +79,7 @@
             line-height: 140%; /* 21px */
             letter-spacing: -0.15px;
             color: white;
+            white-space: nowrap;
 
             &.purple {
                 background: var(--purple-300);
